--- a/src/home/Home.fxml
+++ b/src/home/Home.fxml
@@ -292,7 +292,7 @@
                                                 <Font size="24.0" />
                                              </font>
                                           </Button>
-                                          <Button mnemonicParsing="false" onAction="#cancel" prefHeight="44.0" prefWidth="168.0" text="취소">
+                                          <Button mnemonicParsing="false" onAction="#cancel" prefHeight="44.0" prefWidth="168.0" text="초기화">
                                              <font>
                                                 <Font size="24.0" />
                                              </font>
@@ -306,7 +306,7 @@
                               </VBox>
                            </right>
                            <left>
-                              <TableView fx:id="stockTable" prefHeight="403.0" prefWidth="328.0" BorderPane.alignment="CENTER">
+                              <TableView fx:id="stockTable" onMouseClicked="#selectTable" prefHeight="403.0" prefWidth="328.0" BorderPane.alignment="CENTER">
                                 <columns>
                                   <TableColumn fx:id="bookNameColumn" prefWidth="75.0" text="도서명" />
                                   <TableColumn fx:id="stockColumn" prefWidth="75.0" text="재고" />
