--- a/src/home/Home.fxml
+++ b/src/home/Home.fxml
@@ -333,7 +333,7 @@
                                                 <Font size="24.0" />
                                              </font>
                                           </Label>
-                                          <TextField prefHeight="44.0" prefWidth="205.0">
+                                          <TextField fx:id="fxTF_AccountName" prefHeight="44.0" prefWidth="205.0">
                                              <font>
                                                 <Font size="24.0" />
                                              </font>
@@ -347,7 +347,7 @@
                                                 <Font size="24.0" />
                                              </font>
                                           </Label>
-                                          <TextField prefHeight="44.0" prefWidth="220.0">
+                                          <TextField fx:id="fxTF_WorkerName" prefHeight="44.0" prefWidth="220.0">
                                              <font>
                                                 <Font size="24.0" />
                                              </font>
@@ -361,7 +361,7 @@
                                                 <Font size="24.0" />
                                              </font>
                                           </Label>
-                                          <TextField prefHeight="21.0" prefWidth="221.0">
+                                          <TextField fx:id="fxTF_ContactNumber" prefHeight="21.0" prefWidth="221.0">
                                              <font>
                                                 <Font size="24.0" />
                                              </font>
@@ -370,24 +370,24 @@
                                     </HBox>
                                     <HBox prefHeight="45.0" prefWidth="665.0">
                                        <children>
-                                          <Button mnemonicParsing="false" prefHeight="44.0" prefWidth="168.0" text="등록">
+                                          <Button mnemonicParsing="false" onAction="#OnAccountAdd" prefHeight="44.0" prefWidth="168.0" text="등록">
                                              <font>
                                                 <Font size="24.0" />
                                              </font>
                                           </Button>
-                                          <Button mnemonicParsing="false" prefHeight="44.0" prefWidth="168.0" text="수정">
+                                          <Button mnemonicParsing="false" onAction="#OnAccountModify" prefHeight="44.0" prefWidth="168.0" text="수정">
                                              <font>
                                                 <Font size="24.0" />
                                              </font>
                                           </Button>
-                                          <Button mnemonicParsing="false" prefHeight="44.0" prefWidth="168.0" text="삭제">
+                                          <Button mnemonicParsing="false" onAction="#OnAccountDelete" prefHeight="44.0" prefWidth="168.0" text="삭제">
                                              <font>
                                                 <Font size="24.0" />
                                              </font>
                                           </Button>
-                                          <Button mnemonicParsing="false" prefHeight="44.0" prefWidth="168.0" text="취소">
+                                          <Button mnemonicParsing="false" onAction="#OnAccountNew" prefHeight="44.0" prefWidth="168.0" text="NEW">
                                              <font>
-                                                <Font size="24.0" />
+                                                <Font size="20.0" />
                                              </font>
                                           </Button>
                                        </children>
