--- a/src/home/Home.fxml
+++ b/src/home/Home.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="480.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="home.HomeController">
+<AnchorPane prefHeight="500.0" prefWidth="782.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="home.HomeController">
    <children>
       <TabPane layoutX="14.0" layoutY="14.0" prefHeight="450.0" prefWidth="690.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
@@ -52,17 +52,22 @@
                                           <Font size="24.0" />
                                        </font>
                                     </Button>
-                                    <Button mnemonicParsing="false" prefHeight="44.0" prefWidth="168.0" text="아이디찾기">
+                                    <Button fx:id="FindID" mnemonicParsing="false" onAction="#findId" prefHeight="44.0" prefWidth="168.0" text="아이디찾기">
                                        <font>
                                           <Font size="24.0" />
                                        </font>
                                     </Button>
-                                    <Button mnemonicParsing="false" prefHeight="44.0" prefWidth="168.0" text="비번재설정">
+                                    <Button mnemonicParsing="false" onAction="#rePwd" prefHeight="44.0" prefWidth="168.0" text="비번재설정">
                                        <font>
                                           <Font size="24.0" />
                                        </font>
                                     </Button>
                                     <Button mnemonicParsing="false" prefHeight="44.0" prefWidth="168.0" text="회원가입">
+                                       <font>
+                                          <Font size="24.0" />
+                                       </font>
+                                    </Button>
+                                    <Button fx:id="BTNcancel" mnemonicParsing="false" onAction="#cancel" prefHeight="44.0" prefWidth="259.0" text="취소">
                                        <font>
                                           <Font size="24.0" />
                                        </font>
@@ -73,47 +78,42 @@
                            <right>
                               <VBox prefHeight="403.0" prefWidth="255.0" BorderPane.alignment="CENTER">
                                  <children>
-                                    <TextField promptText="id">
+                                    <TextField fx:id="RTFid" promptText="id">
                                        <font>
                                           <Font size="24.0" />
                                        </font>
                                     </TextField>
-                                    <TextField promptText="이름">
+                                    <TextField fx:id="RTFname" promptText="이름">
                                        <font>
                                           <Font size="24.0" />
                                        </font>
                                     </TextField>
-                                    <TextField promptText="01012341234">
+                                    <TextField fx:id="RTFpn" promptText="01012341234">
                                        <font>
                                           <Font size="24.0" />
                                        </font>
                                     </TextField>
-                                    <PasswordField promptText="password">
+                                    <PasswordField fx:id="RTFpw" promptText="password">
                                        <font>
                                           <Font size="24.0" />
                                        </font>
                                     </PasswordField>
-                                    <PasswordField promptText="password confirm">
+                                    <PasswordField fx:id="RTFpwc" promptText="password confirm">
                                        <font>
                                           <Font size="24.0" />
                                        </font>
                                     </PasswordField>
-                                    <Button mnemonicParsing="false" prefHeight="44.0" prefWidth="259.0" text="가입">
+                                    <Button fx:id="BTNjoin" mnemonicParsing="false" prefHeight="44.0" prefWidth="259.0" text="가입">
                                        <font>
                                           <Font size="24.0" />
                                        </font>
                                     </Button>
-                                    <Button mnemonicParsing="false" prefHeight="44.0" prefWidth="259.0" text="찾기">
+                                    <Button fx:id="BTNfind" mnemonicParsing="false" onAction="#BTNfindClicked" prefHeight="44.0" prefWidth="259.0" text="찾기">
                                        <font>
                                           <Font size="24.0" />
                                        </font>
                                     </Button>
-                                    <Button mnemonicParsing="false" prefHeight="44.0" prefWidth="259.0" text="재설정">
-                                       <font>
-                                          <Font size="24.0" />
-                                       </font>
-                                    </Button>
-                                    <Button mnemonicParsing="false" prefHeight="44.0" prefWidth="259.0" text="취소">
+                                    <Button fx:id="BTNreset" mnemonicParsing="false" prefHeight="44.0" prefWidth="259.0" text="재설정">
                                        <font>
                                           <Font size="24.0" />
                                        </font>
@@ -486,6 +486,7 @@
             </Tab>
         </tabs>
       </TabPane>
+      <AnchorPane fx:id="Pane" layoutX="-266.0" layoutY="62.0" prefHeight="200.0" prefWidth="200.0" />
    </children>
    <padding>
       <Insets top="5.0" />
